[gd_scene load_steps=14 format=3 uid="uid://cw5vfmwtm82ef"]

[ext_resource type="Script" uid="uid://bq6j7u2r20rin" path="res://Script/Entities/Player/PlayerNode.gd" id="1_mrmo3"]
[ext_resource type="Script" uid="uid://d36mt8i5ufm84" path="res://Script/Entities/Player/PlayerBody.gd" id="1_r6l3r"]
[ext_resource type="AudioStream" uid="uid://c5oaj1egbdqfh" path="res://Asset/Audio/passi_multipli_lenti.mp3" id="2_2nsnu"]
[ext_resource type="Texture2D" uid="uid://us1kgf36fhig" path="res://Asset/Entities/Player/PlayerSprite.png" id="2_o5olh"]
[ext_resource type="AudioStream" uid="uid://djcrljwiwvs5l" path="res://Asset/Audio/passi_multipli_normale.mp3" id="3_n13qk"]
[ext_resource type="AudioStream" uid="uid://dnued6dysy767" path="res://Asset/Audio/passi_multipli_veloce.mp3" id="4_g2huk"]
[ext_resource type="AudioStream" uid="uid://b73pkqi0c1gip" path="res://Asset/Audio/wall.mp3" id="5_jbl0w"]
[ext_resource type="AudioStream" uid="uid://cbg4uv6u0bvoq" path="res://Asset/Audio/heartbeat.mp3" id="6_77nho"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lryba"]
radius = 11.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pu30e"]
radius = 2000.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pbwgq"]
radius = 90.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ol1k5"]
radius = 0.01

[sub_resource type="CircleShape2D" id="CircleShape2D_t3w08"]
radius = 13.0

[node name="PlayerNode" type="Node2D"]
script = ExtResource("1_mrmo3")

[node name="WalkSlow" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_2nsnu")
parameters/looping = true

[node name="WalkNormal" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_n13qk")
volume_db = 4.188
parameters/looping = true

[node name="WalkFast" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_g2huk")
volume_db = 6.866
parameters/looping = true

[node name="Wall" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_jbl0w")

[node name="Heartbeat" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_77nho")
volume_db = 10.0

[node name="PlayerBody" type="CharacterBody2D" parent="." groups=["player"]]
motion_mode = 1
safe_margin = 0.001
script = ExtResource("1_r6l3r")
metadata/_edit_group_ = true

[node name="CollisionShape" type="CollisionShape2D" parent="PlayerBody"]
shape = SubResource("CircleShape2D_lryba")
one_way_collision_margin = 0.0

[node name="Sprite" type="Sprite2D" parent="PlayerBody"]
scale = Vector2(0.43, 0.43)
texture = ExtResource("2_o5olh")

[node name="Camera2D" type="Camera2D" parent="PlayerBody"]
position = Vector2(-34, -15)
offset = Vector2(397, -157)
zoom = Vector2(0.5, 0.5)
limit_smoothed = true

[node name="SoundArea" type="Area2D" parent="PlayerBody"]

[node name="CollisionShape" type="CollisionShape2D" parent="PlayerBody/SoundArea"]
shape = SubResource("CircleShape2D_pu30e")
debug_color = Color(0.722191, 0.949356, 1, 0.133333)

[node name="RadarArea" type="Area2D" parent="PlayerBody"]

[node name="CollisionShape" type="CollisionShape2D" parent="PlayerBody/RadarArea"]
shape = SubResource("CircleShape2D_pbwgq")
debug_color = Color(0.337255, 0.615686, 0.278431, 0.137255)

[node name="NoiseArea" type="Area2D" parent="PlayerBody"]

[node name="CollisionShape" type="CollisionShape2D" parent="PlayerBody/NoiseArea"]
shape = SubResource("CircleShape2D_ol1k5")

[node name="DeadArea" type="Area2D" parent="PlayerBody"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBody/DeadArea"]
shape = SubResource("CircleShape2D_t3w08")

[connection signal="body_entered" from="PlayerBody/SoundArea" to="." method="_on_sound_area_body_entered"]
[connection signal="body_exited" from="PlayerBody/SoundArea" to="." method="_on_sound_area_body_exited"]
[connection signal="body_entered" from="PlayerBody/RadarArea" to="." method="_on_radar_area_body_entered"]
[connection signal="body_exited" from="PlayerBody/RadarArea" to="." method="_on_radar_area_body_exited"]
[connection signal="body_entered" from="PlayerBody/NoiseArea" to="." method="_on_noise_area_body_entered"]
[connection signal="body_exited" from="PlayerBody/NoiseArea" to="." method="_on_noise_area_body_exited"]
[connection signal="body_entered" from="PlayerBody/DeadArea" to="." method="_on_dead_area_body_entered"]
